# voxel-sim

./: .gitignore  README.md  _.py  decolor.bat  graphs.ipynb  graphs_2.ipynb  notes.md  pyproject.toml  python_venv.code-workspace  requirements.txt  resources.md
configurations/: experiment_1.1.yaml  experiment_1.2.yaml  experiment_1.yaml  experiment_2.1.yaml  experiment_3.1.yaml  test.yaml  test_1.yaml  test_2.yaml  test_3.yaml  test_4.yaml  test_5.yaml
configurations/final/: preview.yaml  sliced#2.yaml  sliced.yaml  whole#1.yaml  whole#2.yaml
meshes/: femur_whole.mtl  inner_bone.mtl
shaders/: fade.comp  rect.frag
source/data/: colors.py  material.py  mesh.py  truss.py  voxels.py  voxels_2.py
source/debug/: basic_shapes.py  time.py
source/graphics/: buffer.py  matrices.py
source/interactive/: Animator.py  Buttons.py  Keys.py  Scene.py  Tasks.py  Window.py  __init__.py  animator.py  buttons.py  context.py  keys.py  scene.py  tasks.py  window.py
source/loader/: box.py  configuration.py  geometry.py  literal.py  material.py  parameters.py  parse.py  polymorphic.py  test.py  transform.py  vector.py
source/math/: Intersection.py  RasterDirection.py  intersection.py  linalg.py  mesh2voxels.py  nanite_raster.py  np_raster.py  scanline.py  truss2stress.py  utils.py  vox2mesh18.py  voxels2truss.py
source/swarm/: Swarm.py  __init__.py
source/utils/: __init__.py  animated.py  buffer.py  (+10 more)
tests/: __init__.py  dumb.py  gl_parsed.py  gl_swarm.py  gl_test.py  gl_voxels.py  numpy_playground.py  playground.py  raster.py  sieve.py  test_multi.py  test_truss.py
(+222 files in other folders)
