[project]
# FIXME: better name (?)
name = "source"
description = "voxel sim packate"
version = "0.1.0"
authors = [
    { name = "Elias Ramsgaard", email = "eliasr@uio.no" }
]
dependencies = [
    "asyncio",
    "autopep8",
    "data-science-types",
    "glfw",
    "numpy",
    "Pillow",
    "pycodestyle",
    "PyGLM",
    "pyglm-typing",
    "PyOpenGL",
    "PyWavefront",
    "PyYAML",
    "scipy",
    "scikit-umfpack",
    "toml",
    "typing_extensions",
    "pyparadiso",
]
#TODO: PyOpenGL-accelerate
#NOTE: this will only make graphics smoother, not the algorithm
#TEMP: just install it manually if needed

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"